# anp-fetcher

./: .gitignore  README.md  fetch-shlp.py  fetch-shpc.py  fetch.py  pyproject.toml  run.py
anp_fetcher/: config.py  fetcher.py  metadata.py  metadata_gather.py  scraper.py  storage.py  utils.py
