[project]
name = "anp-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Komesu", email = "danielkomesu@gmail.com"},
]

requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4",
    "lxml",
    "httpx",
    "tqdm",
]

[tool.black]
line-length = 79

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
